--- a/index.html
+++ b/index.html
@@ -97,39 +97,13 @@
             <h3>Planeados y realizados</h3>
         
         </div>
-        <div class="projects-container">
-            <div class="project-card">
-                <img src="assets/altura.jfif"></img>
-                <div class="project-info">
-                    <h3>Proyecto 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus vitae ligula gravida facilisis.</p>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="assets/altura.jfif"></img>
-                <div class="project-info">
-                    <h3>Proyecto 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus vitae ligula gravida facilisis.</p>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="assets/altura.jfif"></img>
-                <div class="project-info">
-                    <h3>Proyecto 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus vitae ligula gravida facilisis.</p>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="assets/altura.jfif"></img>
-                <div class="project-info">
-                    <h3>Proyecto 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus vitae ligula gravida facilisis.</p>
-                </div>
-            </div>
+        <div class="projects-container" id="projects-container">
+        </div>
+    </div>
   </section>
   <section id="contacto">
      <div class="container">
-        <div class="contact-container">
+        <div class="contact-container" >
               <h1>Contactanos</h1>
             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus harum deserunt sit quaerat sapiente illum maxime, repellat a ad dolorem quia cumque adipisci modi culpa eos aut. Velit, sequi unde?</p>
         </div>
