--- a/index.html
+++ b/index.html
@@ -71,19 +71,26 @@
             </div>
             <div class="text-container">
                 <h2>Nosotros</h2>
-                <p style="margin: 2%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus vitae ligula gravida facilisis. Donec ut felis vel libero consectetur consectetur. Nulla facilisi. Sed malesuada, arcu vel tincidunt tristique, velit justo laoreet diam, a bibendum est enim at nunc. Sed ac consectetur mi, in condimentum arcu. Nulla facilisi.</p>
-                <h2>Nuestras especialidades</h2>
+                <h3>Expertos en Construcción, Reformas y Herreria en Uruguay</h3>
+                <p style="margin: 2%;">En <b>JG Construcciones</b>, nos dedicamos a transformar espacios con soluciones integrales de construcción y diseño, combinando innovación, calidad y experiencia para entregar resultados que superan expectativas.
+                <br></br> <b>Con más de 15 años en el sector de la construcción en Uruguay</b>, hemos desarrollado un enfoque personalizado que cubre desde proyectos residenciales hasta obras industriales. 
+                <br></br> <b>Nos especializamos en una amplia gama de servicios</b>, incluyendo reformas, impermeabilizaciones, trabajos en altura, electricidad y herrería. Nos adaptamos a las necesidades de cada cliente, ofreciendo soluciones a medida que se ajustan a su visión y presupuesto.
+                <br></br>
+                <b>Nos apasiona crear espacios funcionales</b>, duraderos y estéticos, ya sea una vivienda familiar, un local comercial o una estructura industrial.</p>
+                <br></br>
+                <h2>Nuestros Servicios</h2>
+             
                 <div class="skills-container">
-                            <p><a href="#Steel">Steel Framing</a></p>
-                            <p><a href="#Barbacoa">Barbacoas</a></p>
-                            <p><a href="#Decks">Decks</a></p>
-                            <p><a href="#Impermeabilizaciones">Impermeabilizaciones</a></p>
-                            <p><a href="#Reformas">Reformas</a></p>
-                            <p><a href="#Pinturas">Pinturas</a></p>
-                            <p><a href="#Pergolas">Pergolas</a></p>
-                            <p><a href="#Electricidad">Electricidad</a></p>
-                            <p><a href="#Trabajos">Trabajos en altura</a></p>
-                            <p><a href="#Herreria">Herreria</a></p>
+                            <p><a href="#proyectos">Steel Framing</a></p>
+                            <p><a href="#proyectos">Barbacoas</a></p>
+                            <p><a href="#proyectos">Decks</a></p>
+                            <p><a href="#proyectos">Impermeabilizaciones</a></p>
+                            <p><a href="#proyectos">Reformas</a></p>
+                            <p><a href="#proyectos">Pinturas</a></p>
+                            <p><a href="#proyectos">Pergolas</a></p>
+                            <p><a href="#proyectos">Electricidad</a></p>
+                            <p><a href="#proyectos">Trabajos en altura</a></p>
+                            <p><a href="#proyectos">Herreria</a></p>
                 </div>  
            </div>
             
