--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <img src="assets/instagram-icon.png" alt="Icono de Instagram">
           <div>
             <h3>Instagram</h3>
-            <a href="https://instagram.com/jgconstrucciones" target="_blank">@jgconstrucciones</a>
+            <a href="https://instagram.com/grupo_construccionjg" target="_blank">@grupo_construccionjg</a>
             <p>Proyectos en tiempo real</p>
           </div>
         </div>
