--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                             <p><a href="#proyectos">Electricidad</a></p>
                             <p><a href="#proyectos">Trabajos en altura</a></p>
                             <p><a href="#proyectos">Herreria</a></p>
+                            <p><a href="#proyectos">Contenedores</a></p>
+                            <p><a href="#proyectos">Isopaneles</a></p>
                 </div>  
            </div>
             
@@ -169,7 +171,14 @@
     </div>
   </div>
 </section>
-</section>
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 JG Construcciones. Todos los derechos reservados. 
+      Desarrollado por <a href="https://wa.me/59895420181" target="_blank"
+        style=" color: rgb(0, 0, 0);
+    text-decoration: none;
+    font-size: inherit;
+    transition: color 0.3s ease;">Juan Manuel Tabarez</a></p>
 <!-- Botón de WApp -->
 <a id="whatsapp-button">
   <img src="assets/whatsapp-icon.png" alt="WhatsApp">
