Modificacion de 'Nosotros' y remove map

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 </div>
   </section>  
-  <section id="Nosotros">
+<section id="Nosotros">
     <div class="container">
         <div class="context-container">
             <div class="img-container">
@@ -76,9 +76,11 @@
             <div class="text-container">
                 <h2>Nosotros</h2>
                 <h3>Expertos en Construcción, Reformas y Herreria en Uruguay</h3>
-                <p style="margin: 2%;">En <b>JG Construcciones</b>, nos dedicamos a transformar espacios con soluciones integrales de construcción y diseño, combinando innovación, calidad y experiencia para entregar resultados que superan expectativas.
+                <p style="margin: 2%;">En <b>JG Construcciones</b>, nos dedicamos a transformar espacios con soluciones integrales de construcción y diseño llave en mano, combinando innovación, calidad y experiencia para entregar resultados que superan expectativas.
+                <br></br>
+                <b>Contamos con un equipo completo de profesionales</b> que incluye arquitectos, ingenieros y contadores, ofreciendo un servicio integral. Nos encargamos de todos los trámites y permisos si el cliente lo requiere, incluyendo gestión contable, trámites ante BPS, MTSS, Bomberos, intendencias y demás organismos necesarios. Este servicio es opcional y adaptado a las necesidades de cada proyecto.
                 <br></br> <b>Con más de 30 años en el sector de la construcción en Uruguay</b>, hemos desarrollado un enfoque personalizado que cubre desde proyectos residenciales hasta obras industriales. 
-                <br></br> <b>Nos especializamos en una amplia gama de servicios</b>, incluyendo reformas, impermeabilizaciones, trabajos en altura, electricidad y herrería. Nos adaptamos a las necesidades de cada cliente, ofreciendo soluciones a medida que se ajustan a su visión y presupuesto.
+                <br></br> <b>Nos especializamos en una amplia gama de servicios</b>, incluyendo reformas, ampliaciones, construcciones nuevas, impermeabilizaciones, trabajos en altura, electricidad, sanitaria, iluminación, mantenimiento de edificios y herrería. Nos adaptamos a las necesidades de cada cliente, ofreciendo soluciones a medida que se ajustan a su visión y presupuesto.
                 <br></br>
                 <b>Nos apasiona crear espacios funcionales</b>, duraderos y estéticos, ya sea una vivienda familiar, un local comercial o una estructura industrial.</p>
                 <br></br>
@@ -98,13 +100,21 @@
                             <p><a href="#proyectos">Contenedores</a></p>
                             <p><a href="#proyectos">Isopaneles</a></p>
                             <p><a href="#proyectos">Riegos</a></p>
-
+                            <p><a href="#proyectos">Carpintería</a></p>
+                            <p><a href="#proyectos">Sanitaria</a></p>
+                            <p><a href="#proyectos">Frentes y contrafrentes</a></p>
+                            <p><a href="#proyectos">Aire acondicionado</a></p>
+                            <p><a href="#proyectos">Casas y oficinas contenedores</a></p>
+                            <p><a href="#proyectos">Piscinas</a></p>
+                            <p><a href="#proyectos">Automatismo de portones</a></p>
+                            <p><a href="#proyectos">Mantenimiento de edificios</a></p>
+                            <p><a href="#proyectos">Mantenimiento de locales comerciales</a></p>
                 </div>  
            </div>
             
         </div>
     </div>
-  </section>
+</section>     
   <section id="proyectos">
     <div class="container" style="background-color:  rgb(0, 0, 0); "  >
         <div class="title">
@@ -127,7 +137,7 @@
           <img src="assets/email-icon.png" alt="Icono de email">
           <div>
             <h3>Email</h3>
-            <a href="mailto:info@jgconstrucciones.com">info@jgconstrucciones.com</a>
+            <a href="mailto:info@jgconstrucciones.com"> jorgegalvanpanosian@gmail.com</a>
             <p>Respuesta en menos de 24 horas</p>
           </div>
         </div>
@@ -137,6 +147,14 @@
           <div>
             <h3>WhatsApp</h3>
             <a href="https://wa.me/59899616991">+598 99 616 991</a>
+            <p>Cotizaciones inmediatas</p>
+          </div>
+        </div>
+         <div class="contact-item">
+          <img src="assets/whatsapp-icon.png" alt="Icono de WhatsApp">
+          <div>
+            <h3>WhatsApp</h3>
+            <a href="https://wa.me/598096428479">+598 096 428 479</a>
             <p>Cotizaciones inmediatas</p>
           </div>
         </div>
@@ -162,18 +180,6 @@
         <p class="testimonial">"Trabajamos en cada rincón de Uruguay con los mismos estándares de calidad y profesionalismo."</p>
       </div>
       
-      <!-- Mapa opcional -->
-      <div class="map-container">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3276.123456789012!2d-56.12345678901234!3d-34.12345678901234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDA3JzI0LjQiUyA1NsKwMDcnMjQuNCJX!5e0!3m2!1ses!2suy!4v1234567890123!5m2!1ses!2suy" 
-          width="100%" 
-          height="300" 
-          style="border:0;" 
-          allowfullscreen="" 
-          loading="lazy"
-          title="Áreas de cobertura de JG Construcciones en Uruguay">
-        </iframe>
-      </div>
     </div>
   </div>
 </section>
