--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@
                             <p><a href="#proyectos">Electricidad</a></p>
                             <p><a href="#proyectos">Trabajos en altura</a></p>
                             <p><a href="#proyectos">Herreria</a></p>
-                            <p><a href="#proyectos">Contenedores</a></p>
-                            <p><a href="#proyectos">Isopaneles</a></p>
-                            <p><a href="#proyectos">Riegos</a></p>
+                            <p><a href="#proyectos">Isopanel</a></p>
+                            <p><a href="#proyectos">Riego</a></p>
                             <p><a href="#proyectos">Carpintería</a></p>
                             <p><a href="#proyectos">Sanitaria</a></p>
                             <p><a href="#proyectos">Frentes y contrafrentes</a></p>
@@ -137,7 +136,7 @@
           <img src="assets/email-icon.png" alt="Icono de email">
           <div>
             <h3>Email</h3>
-            <a href="mailto:info@jgconstrucciones.com"> jorgegalvanpanosian@gmail.com</a>
+            <a href="mailto:info@jgconstrucciones.com">info@jgconstrucciones.com</a>
             <p>Respuesta en menos de 24 horas</p>
           </div>
         </div>
