--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <img src="assets/email-icon.png" alt="Icono de email">
           <div>
             <h3>Email</h3>
-            <a href="mailto:info@jgconstrucciones.com">info@jgconstrucciones.com</a>
+            <a href="mailto:jorgegalvanpanosian@gmail.com">jorgegalvanpanosian@gmail.com</a>
             <p>Respuesta en menos de 24 horas</p>
           </div>
         </div>
