--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
             <div class="text-container">
                 <h2>Nosotros</h2>
                 <h3>Expertos en Construcción, Reformas y Herreria en Uruguay</h3>
-                <p style="margin: 2%;">En <b>JG Construcciones</b>, nos dedicamos a transformar espacios con soluciones integrales de construcción y diseño  llave en mano, combinando innovación, calidad y experiencia para entregar resultados que superan expectativas.<br></br>
-                  <b>Trabajo llave en mano</b>
+                <p style="margin: 2%;">En <b>JG Construcciones</b>,nos dedicamos a transformar espacios con soluciones integrales de construcción y diseño, combinando innovación, calidad y experiencia para entregar resultados que superan expectativas.<b>Trabajo llave en mano</b>.
                 <br></br>
                 <b>Contamos con un equipo completo de profesionales</b> que incluye arquitectos, ingenieros y contadores, ofreciendo un servicio integral. Nos encargamos de todos los trámites y permisos si el cliente lo requiere, incluyendo gestión contable, trámites ante BPS, MTSS, Bomberos, intendencias y demás organismos necesarios. Este servicio es opcional y adaptado a las necesidades de cada proyecto.
                 <br></br> <b>Con más de 30 años en el sector de la construcción en Uruguay</b>, hemos desarrollado un enfoque personalizado que cubre desde proyectos residenciales hasta obras industriales. 
